--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "path": "^0.12.7",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.6"
+    "sequelize": "^5.21.6",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
